スクロール

--- a/app/views/mypages/card.html.haml
+++ b/app/views/mypages/card.html.haml
@@ -2,7 +2,7 @@
 .navi
   - breadcrumb :card_mypage
   = render "layouts/breadcrumbs"
-
+= render partial: "posts/camera"
 .main
   .card
     .card__title 支払い方法
