--- a/app/views/mypages/confirmation.html.haml
+++ b/app/views/mypages/confirmation.html.haml
@@ -2,7 +2,7 @@
 .navi
   - breadcrumb :confirmation_mypage
   = render "layouts/breadcrumbs"
-
+= render partial: "posts/camera"
 .main
   .confirmation
     .confirmation__content 完了
