--- a/app/views/mypages/delete.html.haml
+++ b/app/views/mypages/delete.html.haml
@@ -2,7 +2,7 @@
 .navi
   - breadcrumb :delete_mypage
   = render "layouts/breadcrumbs"
-
+= render partial: "posts/camera"
 .main
   .delete
     .delete__content
