--- a/app/views/mypages/index.html.haml
+++ b/app/views/mypages/index.html.haml
@@ -2,6 +2,7 @@
 .navi
   - breadcrumb :mypage
   = render "layouts/breadcrumbs"
+= render partial: "posts/camera"
 .main
   .content
     .content__icon
