--- a/app/views/mypages/profile.html.haml
+++ b/app/views/mypages/profile.html.haml
@@ -2,7 +2,7 @@
 .navi
   - breadcrumb :profile_mypage
   = render "layouts/breadcrumbs"
-
+= render partial: "posts/camera"
 .main
   .profile
     .profile__title プロフィール
