--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -2,6 +2,7 @@
 .navi
   - breadcrumb :show_mypage
   = render "layouts/breadcrumbs"
+= render partial: "posts/camera"
 .main
   .content
     .content__box4
