--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -66,7 +66,7 @@
 
     .field
       = f.label :birthday, "生年月日", class: "member-text"
-      %span.required 必須
+      %span.required 必須aaa
       %br/
       = f.select :birthday_year,  [*1919..2019],:prompt => "---", class: "field-input-time"
       年
