--- a/app/views/signups/complete.html.haml
+++ b/app/views/signups/complete.html.haml
@@ -24,7 +24,7 @@
       %p ありがとうございます
       %p 会員登録が完了しました。
   
-  = link_to 'メルカリをはじめる',root_path , class: "submit-button" 
+  = link_to 'メルカリをはじめる',root_path , class: "submit-button_start" 
 
 
 = render 'signups/footer'
