--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "mypage/password";
 @import "mypage/identification";
 @import "cards/new";
+@import "signup";
 
 
 
@@ -84,6 +85,7 @@ img.rogo {
         width: 875px;
         height: 40px;
         background-color: whitesmoke;
+        position: relative;
         font-size: 16px;
         border-width: 1px;
         border-style: solid;
