--- a/app/views/signups/address.html.haml
+++ b/app/views/signups/address.html.haml
@@ -2,20 +2,22 @@
   .progress-image
   = link_to image_tag('/img/logo_red.svg', width: '150', height: '100'), root_path
   %ur.progress-bar
-    %li.progress-bar-red
-      %span.return-color 会員情報
-    %li.progress-bar-red
-      %span.return-color 電話番号認証
-    %li.progress-bar-red
-      %span お届け先住所入力
-    %li.progress-bar-normal
-      %span 支払い方法
-    %li.progress-bar-normal
-      %span 完了
+    %li.progress-bar-name-gray
+      会員情報
+      %span.return-color-box-f
+    %li.progress-bar-name-gray
+      電話番号認証
+      %span.return-color-box-red
+    %li.progress-bar-name-gray-name-red
+      お届け先住所入力
+      %span.return-color-box-red
+    %li.progress-bar-name-gray
+      支払い方法
+      %span.return-color-box-before-gray
+    %li.progress-bar-name-gray
+      完了
+      %span.return-color-box-l
   .progress-bar-clear
-
-%label{for: "progressbar"}
-%progress#progressbar{max: "100", value: "55"}
 
 .member-wrap
   %h2 お届け先住所入力
