--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -16,9 +16,9 @@
                 .image_box_main
                   .preview
                   %label{for:"image",class:"image_box"}
-                    -# %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",accepts_nested_attributes_for: true,image:"0",style:"display:none"}/
-                  = form.fields_for :images ,class:"image_box"do |img|
-                    = img.file_field :image_url
+                    %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",accepts_nested_attributes_for: true,image:"0",style:"display:none"}/
+                  -# = form.fields_for :images ,class:"image_box"do |img|
+                  -#   = img.file_field :image_url
               .good_content
                 .good_content_box
                   .good_content_title 商品名
