カテゴリー

--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,10 +1,10 @@
-%span.like
-  - if @post.iine?(current_user)
-    = form_for(@post.likes.find_by(user_id: current_user.id), method: :delete, remote: true) do |f|
-      = button_tag(class: "btn btn-default btn-xs") do
-        = content_tag :span, "#", class: "glyphicon glyphicon-heart"
-  - else
-    = form_for(@post.likes.build, remote: true) do |f|
-      %div= hidden_field_tag :post_id, @post.id
-      = button_tag(class: "btn btn-default btn-xs") do
-        = content_tag :span,"#{@post.likes_count}", class: "glyphicon glyphicon-heart-empty"
+-# %span.like
+-#   - if @post.iine?(current_user)
+-#     = form_for(@post.likes.find_by(user_id: current_user.id), method: :delete, remote: true) do |f|
+-#       = button_tag(class: "btn btn-default btn-xs") do
+-#         = content_tag :span, "#", class: "glyphicon glyphicon-heart"
+-#   - else
+-#     = form_for(@post.likes.build, remote: true) do |f|
+-#       %div= hidden_field_tag :post_id, @post.id
+-#       = button_tag(class: "btn btn-default btn-xs") do
+-#         = content_tag :span,"#{@post.likes_count}", class: "glyphicon glyphicon-heart-empty"
