--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -52,7 +52,7 @@
         = "#{@post.description}"
       .item-button-container
         .item-button-left
-          = render partial: "likes/like"
+          = link_to "いいね"
         .item-button-left
           = link_to "不適切な商品の報告"
         .item-button-right
