--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -55,7 +55,7 @@
   width: 100%;
   height: 390px;
   background-image: url("https://web-jp-assets.mercdn.net/_next/static/images/top-banner-main-892151cc75b1f6a1285bf7943c9b933c.jpg");
-  background-size: auto;
+  background-size: cover;
 
   .box{
     align-items: center;
