--- a/app/views/buy_order_confirmations/show.html.haml
+++ b/app/views/buy_order_confirmations/show.html.haml
@@ -6,8 +6,8 @@
     .content_good_box 
       .content_good_box_form
         .content_good_image gazou 
-        .content_good_text aiueo
-        -# =@posts.name
+        .content_good_text 
+          -# =@posts.name
       .content_good_detail
         .good_cost
           .good_cost_box
@@ -18,12 +18,13 @@
         .buy_cost
           .buy_cost_box
             .cost_display 支払い金額
-            .real_cost ¥550
-            -# = "#{@posts.price}円" 
+            .real_cost
+              -# = "#{@posts.price}円" 
         .attend_content 配送先と支払い方法の入力を完了してください。
         .purchase
-          .purchase_text 購入する
-          -# =link_to "購入する", buy_order_path
+          .purchase_text
+            = form_for :buy_order, url:pay_posts_path do |form|
+              %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_**************"}
     .content_user
       .content_user_box
         .address 配送先
