--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -37,12 +37,12 @@
       %br/
       = f.email_field :email, autofocus: true, class: "field-input", placeholder: "PC・携帯どちらでも可",autocomplete: "email"
 
-    .field
+    .field#one
       = f.label :password, "パスワード", class: "member-text"
       %span.required 必須
       %br/
       = f.password_field :password, type: "password", id: "password", class: "field-input", placeholder: "7文字以上"
-      %input#password-check{type: "checkbox"}
+      %input#password-check{type: "checkbox", "data-turbolinks-permanent": ""}
 
     .actions
 
@@ -95,3 +95,20 @@
       = link_to "本人登録の情報について＞"
 
 = render 'signups/footer'
+
+:javascript
+  $(document).on('turbolinks:load', function() {
+      $(function() {
+          let pw = document.getElementById('password');
+          console.log(pw)
+          let pwCheck = document.getElementById('password-check');
+          console.log(pwCheck)
+              pwCheck.addEventListener('change', () => {
+          if(pwCheck.checked) {
+              pw.setAttribute('type', 'text');
+          } else {
+              pw.setAttribute('type', 'password');
+          }
+          }, false);
+      });
+  });
