--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -17,6 +17,10 @@
                   .preview
                   = form.fields_for :images do |img|
                     = img.file_field :image_url 
+                -#   ドラッグアンドドロップ
+                -#   %br
+                -#   またはクリックしてファイルをアップロード
+
               .good_content
                 .good_content_box
                   .good_content_title 商品名
