--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,14 +6,10 @@
         = @post.name
       .item-main-content.flex-box
         .owl-item-inner
-          = link_to image_tag('/img/ps5.jpg', width: '300', height: '300'), root_path
+          = image_tag "#{@post.images[0].image_url}", size: '300x300', class:'post_show_photo_main'
           .owl-item-inner-box
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
-            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+          -@post.images.where("image_url is not NULL").each_with_index do |img, i|
+            = image_tag "#{img.image_url}", size: '70x70',id: "image-#{i}",class:'post_show_photos'
         %table.item-detail-table
           %tbody
             %tr
