--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -64,6 +64,7 @@
                             .preview {
                                 flex-wrap: wrap;
                                 display: flex;
+                                margin: 10px;
                             }
                             .btnimage{
                                 margin:5px;
