--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -53,7 +53,7 @@
       .item-button-container
         .item-button-left
           = link_to "いいね"
-        .item-button-left
+        .item--left
           = link_to "不適切な商品の報告"
         .item-button-right
           = link_to "あんしん・あんぜんへの取り組み"
