--- a/app/views/buy_order_confirmations/show.html.haml
+++ b/app/views/buy_order_confirmations/show.html.haml
@@ -5,13 +5,15 @@
     .content_title 購入内容の確認
     .content_good_box 
       .content_good_box_form
-        .content_good_image gazou 
+        .content_good_image gazou
+        ="#{@post. image_url}"
         .content_good_text 
           -# =@posts.name
       .content_good_detail
         .good_cost
           .good_cost_box
             .buy_money ¥550
+            -# = "#{@posts.price}円" 
             .send_tax 送料込み
         .good_point
           .good_point_display ポイントがありません
@@ -24,7 +26,7 @@
         .purchase
           .purchase_text
             = form_for :buy_order, url:pay_posts_path do |form|
-              %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_**************"}
+              %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_**************",:class =>"purchase"}
     .content_user
       .content_user_box
         .address 配送先
