--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -312,3 +312,23 @@ body {
     color: #fff;
     }
 }
+
+.items-box_photo__sold{
+    width: 0;
+    height: 0;
+    border-top: 60px solid #ea352d ;
+    border-right: 60px solid transparent;
+    border-bottom: 60px solid transparent;
+    border-left: 60px solid #ea352d ;
+    z-index:100;
+    position: absolute;
+    top:248px;
+    &__inner{
+      transform: rotate(-45deg);
+      font-size: 28px;
+      margin:-25px 0px 0px -55px;
+      color: #fff;
+      letter-spacing: 2px;
+      font-weight: 600;
+    }
+  }
