--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -18,12 +18,16 @@
         - @post.each do |post|
           =link_to "/posts/#{post.id}" do
             .post-content
-              .post-name
-              = post.name
-              .edit-tag
-              =link_to '編集', "/posts/#{post.id}/edit", method: :get
-              .delite-tag
-              =link_to '削除', "/posts/#{post.id}", method: :delete 
+              .post-img
+                =image_tag "#{post.images[0].image_url}", class:'itme-image'
+              .post-detail
+                .post-name
+                  = post.name
+                .detail-btn
+                  .like-btn 
+                    %i.fas.fa-heart.faa-pulse 7
+                  .comment-btn
+                    %i.fas.fa-comment-alt.faa-pulse 0
   = render "side"
 = render "posts/footer"
 
