--- a/app/views/buy_order_confirmations/show.html.haml
+++ b/app/views/buy_order_confirmations/show.html.haml
@@ -6,7 +6,7 @@
     .content_good_box 
       .content_good_box_form
         .content_good_image gazou
-        ="#{@post. image_url}"
+        -# ="#{@post. image_url}"
         .content_good_text 
           -# =@posts.name
       .content_good_detail
@@ -26,19 +26,25 @@
         .purchase
           .purchase_text
             = form_for :buy_order, url:pay_posts_path do |form|
-              %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_**************",:class =>"purchase"}
+              %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_**************"}
     .content_user
       .content_user_box
         .address 配送先
         .person_address
-          .person_postal_code a
-          .person_send_address a
-          .person_name a
+          .person_postal_code 
+          -# =@user.postal_code
+          .person_send_address 
+          -# =@user.prefecture 
+          -# =@user.city
+          -# =@user.address
+          .person_name 
+          -# =@user.name
         .address_change 変更する
     .content_cost 
       .content_cost_box
         .cost_how 支払い方法
-        .cost_detail
+        .cost_detail クレジットカード
+        -# =@cards.card_id
         .cost_in_cost
         .cost_change 変更する
   .footer_wrapper
