--- a/app/assets/stylesheets/cards/new.scss
+++ b/app/assets/stylesheets/cards/new.scss
@@ -216,9 +216,10 @@ body {
 
 .member-text_num{
   width:309px;
-  height: 43px;
+  height: 33px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  padding: 5px;
 }
 
 .member-text_exp {
