--- a/app/views/mypages/_side.html.haml
+++ b/app/views/mypages/_side.html.haml
@@ -29,7 +29,7 @@
         %i.fas.fa-chevron-right
         出品した商品-取引中
     %li.side__list-box
-      =link_to "#", class:"side__list-name"do
+      =link_to post_sold_mypages_path, class:"side__list-name"do
         %i.fas.fa-chevron-right
         出品した商品-売却済み
     %li.side__list-box
