--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -62,7 +62,7 @@
                         = brand.label "ブランド"
                         %span.form-require-gray 任意
                       %div
-                      = brand.text_field :brand, placeholder: "例）シャネル", value: "", class: "content_form input-default"
+                      = brand.text_field :brand, placeholder: "例）シャネル", value: "", class: "content_forminput-default"
 
 
                   .content_form.good_form_3                  
