--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -13,8 +13,8 @@
         height: 50px;
         width: 100%;
         background-color: #fff;
-        border-color: rgb(214, 212, 212);
         cursor: pointer;
+        border: 1px solid #ccc;
     }
     input {
         border-radius: 5px;
@@ -41,9 +41,10 @@
                     padding: 32px 16px;
                     line-height: 1.5;
                     font-weight: bold;
+                    border-bottom: 1px solid #eee;
                 }
                 .text {
-                    border-top: 1px solid #eee;
+                    margin: 8px 0 8px;
                     .image_upload {
                         padding: 40px;
                         .image_upload_box {
@@ -100,9 +101,11 @@
                         }
                         .good_box {
                             width: 100%;
-                            height: 48px;
+                            height: 30px;
                             border-style: groove, border-width thin;
                             border: 1px solid #ccc;
+                            padding: 10px 16px 8px;
+                            margin: 8px 0 0;
                         }
                         .good_description {
                             display: flex;
@@ -110,11 +113,12 @@
                         }
                         .good_description_box {
                             width: 100%;
-                            height: 140px;
+                            height: 125px;
                             border-style: groove, border-width thin;
-                            padding: 12px 0px 0 0px;
                             border: 1px solid #ccc;
                             border-radius: 0px;
+                            margin: 8px 0 0;
+                            padding: 10px;
                         }
                     }
                     .good_content_detail {
@@ -398,4 +402,10 @@
     margin-left: 5px;
     height: 15px;
     width: 25px;
+}
+.content_forminput-default{
+    padding: 10px 0px 10px 16px;
+    height: 28px;
+    width: 382px;
+    border: 1px solid #ccc;
 }
