--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -37,14 +37,19 @@
       %br/
       = f.email_field :email, autofocus: true, class: "field-input", placeholder: "PC・携帯どちらでも可",autocomplete: "email"
 
-    - if session[:password]
+    -if session[:password_confirmation]
       %h6= ""
-    - else 
+    -else
       .field
         = f.label :password, "パスワード", class: "member-text"
         %span.required 必須
         %br/
         = f.password_field :password, type: "password", id: "password", class: "field-input", placeholder: "7文字以上"
+      .field
+        = f.label :password, "確認用パスワード", class: "member-text"
+        %span.required 必須
+        %br/
+        = f.password_field :password_confirmation, type: "password", id: "password", class: "field-input", placeholder: "7文字以上"
         %input#password-check{type: "checkbox"}
      
     .actions
