--- a/app/assets/stylesheets/buy_order_confirmations.scss
+++ b/app/assets/stylesheets/buy_order_confirmations.scss
@@ -9,7 +9,7 @@
     background-color: #fff;
     width: 700px;
     margin: 0 auto;
-    height: 1000px;
+    height: 850px;
     .content_title{
       text-align: center;
       font-size: 25px;
@@ -47,9 +47,6 @@
             .buy_money{
               margin-right: 20px;
               font-size: 22px;
-            }
-            .send_tax{
-              padding-top: 5px;
             }
           }
         }
@@ -102,13 +99,13 @@
     .content_user{
       border-top: 1px solid #f5f5f5;
       width: 50%;
-      height: 200px;
+      height: 150px;
       margin:0px 40px 0 130px;
       padding: 40px 40px 0 40px;
       .content_user_box{
         width: 100%;
         height: 70%;
-        .address{
+        .address2{
           width: 100%;
           height: 15%;
         }
@@ -128,7 +125,7 @@
     .content_cost {
       border-top: 1px solid #f5f5f5;
       width: 50%;
-      height: 200px;
+      height: 150px;
       margin:0px 40px 0 130px;
       padding: 40px 40px 0 40px;
       .content_cost_box{
@@ -140,7 +137,7 @@
         }
         .cost_detail{
           width: 100%;
-          height: 55%;
+          height: 15%;
         }
         .cost_in_cost{
           width: 100%;
