--- a/app/views/buy_order_confirmations/show.html.haml
+++ b/app/views/buy_order_confirmations/show.html.haml
@@ -5,14 +5,14 @@
     .content_title 購入内容の確認
     .content_good_box 
       .content_good_box_form
-        .content_good_image gazou 
+        .content_good_image 
+          =image_tag "#{@post.images[0].image_url}", size: '100x100'
         .content_good_text 
           =@post.name
       .content_good_detail
         .good_cost
           .good_cost_box
             .buy_money 
-            .send_tax 送料込み
         .good_point
           .good_point_display ポイントがありません
         .buy_cost
@@ -28,18 +28,24 @@
       
     .content_user
       .content_user_box
-        .address 配送先
+        .address2 配送先
         .person_address
-          .person_postal_code a
-          .person_send_address a
-          .person_name a
-        .address_change 変更する
+          .address_change 変更する
+          .person_postal_code
+            〒
+            = @post.seller.postal_code
+          .person_send_address 
+            = @post.seller.prefecture
+          .person_name 
+            = @post.seller.nickname
     .content_cost 
       .content_cost_box
-        .cost_how 支払い方法
-        .cost_detail
-        .cost_in_cost
         .cost_change 変更する
+        .cost_how 支払い方法
+        クレジット
+        .cost_detail **********2753
+        .cost_in_cost 有効期限10/22
+
   .footer_wrapper
     %ul.footer-wrap
       %li.footer-text プライバシーポリシー
