--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -4,7 +4,8 @@
     .side_list_main 
     
       .search_box
-        .search_list_box
+        .search_list_box 
+          並び替え
           .icon
           .list
       .search_list
