--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -253,7 +253,7 @@
         &__content {
             // width: 1175px;
             height: 544px;
-            margin: 0 120px;
+            margin: 0 120px 130px;
         }
         &__title {
             display: flex;
