--- a/app/views/signups/address.html.haml
+++ b/app/views/signups/address.html.haml
@@ -1,6 +1,6 @@
 .progress-wrap
   .progress-image
-  = link_to image_tag('/img/logo_red.svg', width: '150', height: '100'), root_path
+  = link_to image_tag('/img/fmarket_logo_red.svg', width: '200', height: '100'), root_path
   %ur.progress-bar
     %li.progress-bar-name-gray
       会員情報
