--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -7,6 +7,7 @@
         .search_list_box 
           並び替え
           .icon
+          =select_tag[’価格の安い順’,,,]
           .list
       .search_list
         .search_title 
