--- a/app/assets/stylesheets/posts/search.scss
+++ b/app/assets/stylesheets/posts/search.scss
@@ -9,7 +9,7 @@
   .search_box{
     top:0;
     left: 0;
-    width: auto;
+    width: 300px;
     opacity: 1;
     border: solid 1px ;
     height: 40px;
